Sorted utility scripts into seperate directories.